[refactor] #47 매장 페이지 엔티티 수정 및 성능 개선
* [feat] #3 매장페이지 엔티티 작성

* [feat] #4 매장 상세정보 데이터 로드

* [feat] #4 매장 세부정보 조회 API 구현

* [feat] #4 전체 매장 검색 및 조회 API 구현

* [refactor] #4 SwaggerConfig에 store API 추가

* [refactor] #4 ApiResponse로 반환 형태 수정

* [refactor] #4 store 테이블 data reload

* [refactor] #4 store 테이블 data reload

* [refactor] #4 store 테이블 운영시간,주문시간 data reload 위한 코드 수정

* [refactor] #4 store List에 service 항목 추가 및 성능 개선 위한 코드 수정

* [refactor] #4 쓰이지 않는 코드 삭제

* [refactor] #4 쓰이지 않는 코드 삭제